--- a/client/index.html
+++ b/client/index.html
@@ -3,13 +3,29 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Аркада на canvas</title>
-	<!-- <link rel="stylesheet" href="css/style.css"> -->
+	<link rel="stylesheet" href="css/style.css">
+	<style>
+		body, html {
+			margin:0;
+			width:  100%;
+			height: 100%;
+			background-color: #2d2d2d;
+		}
+	</style>
 </head>
 <body>
 	<button onclick="happy()">Happy!</button>
 	<canvas id="canvas-main"></canvas>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
 	<script>
+		var canvas = document.getElementById("canvas-main");
+
+		canvas.width = window.innerWidth;
+		canvas.height = window.innerHeight;
+		var WIDTH = canvas.width;
+		var HEIGHT = canvas.height;
+
+		var ctx = canvas.getContext('2d');
 		var socket = io();
 
 		var happy = function() {
@@ -17,11 +33,30 @@
 				reason: 'it\'s my birthday'
 			});
 		}
+
+		ctx.font = "40px Arial";
+		// цвет
+		ctx.fillStyle = "#29e929";
+
+		var player = {
+			x: 50,
+			y: 60,
+			speedX: 20,
+			speedY:2,
+			name: "P"
+		}
 		
 
-		socket.on('serverMsg',function(data){
-			console.log(data.msg);
+		socket.on('newPositions',function(data){
+			ctx.clearRect(0,0,WIDTH,HEIGHT);
+			for (var i=0;i<data.length;i++){
+				ctx.fillText(data[i].name,data[i].x,data[i].y);
+			}
+			
 		})
+
+
+		
 	</script>
 </body>
 </html>
