--- a/client/index.html
+++ b/client/index.html
@@ -75,6 +75,10 @@
 		var chatInput = document.getElementById('chat-input');
 		var chatForm = document.getElementById('chat-form');
 
+		canvas.onselectstart = function() {
+		    return false;
+		};
+
 		socket.on('newPositions',function(data){
 			ctx.clearRect(0,0,WIDTH,HEIGHT);
 			for (var i=0;i<data.players.length;i++){
@@ -107,6 +111,21 @@
 				socket.emit('keyPress',{inputId:'left', state:false});
 			if(e.keyCode === 87) //w
 				socket.emit('keyPress',{inputId:'top', state:false});
+		}
+
+		document.onmousedown = function(e) {
+			socket.emit('keyPress',{inputId:'attack',state:true});
+		}
+
+		document.onmouseup = function(e) {
+			socket.emit('keyPress',{inputId:'attack',state:false});
+		}
+
+		document.onmousemove = function(e) {
+			var x = -WIDTH/2 + e.clientX - 8;
+			var y = -HEIGHT/2 + e.clientY - 8;
+			var angle = Math.atan2(y,x) / Math.PI *180;
+			socket.emit('keyPress',{inputId:'mouseAngle',state:angle});
 		}
 
 		chatForm.onsubmit = function(e) {
