--- a/client/index.html
+++ b/client/index.html
@@ -3,48 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Аркада на canvas</title>
-	<link rel="stylesheet" href="css/style.css">
-	<style>
-		body, html {
-			margin:0;
-			width:  100%;
-			height: 100%;
-			background-color: #2d2d2d;
-		}
-
-		#chat-container {
-			width: calc(100% - 48px);
-		    height: 140px;
-		    position: absolute;
-		    bottom: 0;
-		    padding: 0 24px;
-		    left: 0;
-		}
-
-		#chat-text {
-			width:100%;
-			height:100px;
-			overflow-y: auto;
-		    color: white;
-		}
-
-		#chat-form {
-			width:100%;
-			height:40px;
-		}
-
-		#chat-input {
-			width:100%;
-			height:30px;
-		    overflow: overlay;
-		    background-color: #00000000;
-		    border:none;
-	        color: white;
-            padding: 0 12px;
-            outline: none;
-		}
-
-	</style>
+	<link rel="stylesheet" href="client/css/style.css">
 </head>
 <body>
 	<canvas id="canvas-main"></canvas>
