--- a/client/index.html
+++ b/client/index.html
@@ -38,6 +38,7 @@
 		var gameContainer = document.getElementById('game-container');
 		
 		/* ============= AUTH SCREEN ================= */
+		// =========================================== //
 		var authContainer = document.getElementById('auth-container');
 		var authUsername = document.getElementById('auth-username');
 		var authPassword = document.getElementById('auth-password');
@@ -85,6 +86,7 @@
 
 
 		/* ============= GAME SCREEN ================= */
+		// =========================================== //
 		var canvas = document.getElementById("canvas-main");
 
 		canvas.width = window.innerWidth;
@@ -94,29 +96,88 @@
 
 		var ctx = canvas.getContext('2d');
 		
-
 		ctx.font = "40px Arial";
 
-		var chatText = document.getElementById('chat-text');
-		var chatInput = document.getElementById('chat-input');
-		var chatForm = document.getElementById('chat-form');
+		// ============ init ===============
+		var Player = function(initPack) {
+			var self = {};
+			self.id = initPack.id;
+			self.name = initPack.name;
+			self.x = initPack.x;
+			self.y = initPack.y;
+			Player.list[self.id] = self;
+			return self;
+		}
 
-		canvas.onselectstart = function() {
-		    return false;
-		};
+		Player.list = {};
 
-		socket.on('newPositions',function(data){
+		var Bullet = function(initPack) {
+			var self = {};
+			self.id = initPack.id;
+			self.x = initPack.x;
+			self.y = initPack.y;
+			Bullet.list[self.id] = self;
+			return self;
+		}
+
+		Bullet.list = {};
+		
+		socket.on('init',function(data){
+			for(var i=0;i<data.player.length;i++){
+				new Player(data.player[i]);
+			}
+			for(var i=0;i<data.bullet.length;i++){
+				new Bullet(data.bullet[i]);
+			}
+		});
+
+		// ============ update ===============
+		socket.on('update',function(data){
+			for(var i=0;i<data.player.length;i++){
+				var pack = data.player[i];
+				var updatedPlayer = Player.list[pack.id];
+				if(updatedPlayer) {
+					if(pack.x !== undefined)
+						updatedPlayer.x = pack.x;
+					if(pack.y !== undefined)
+						updatedPlayer.y = pack.y;
+				}
+			}
+			for(var i=0;i<data.bullet.length;i++){
+				var pack = data.bullet[i];
+				var updatedBullet = Bullet.list[pack.id];
+				if(updatedBullet) {
+					if(pack.x !== undefined)
+						updatedBullet.x = pack.x;
+					if(pack.y !== undefined)
+						updatedBullet.y = pack.y;
+				}
+			}
+		});
+
+		// ============ remove ===============
+		socket.on('remove',function(data){
+			for(var i=0;i<data.player.length;i++){
+				delete Player.list[data.player[i]];
+			}
+			for(var i=0;i<data.bullet.length;i++){
+				delete Bullet.list[data.bullet[i]];
+			}
+		});
+
+		setInterval(function(){
 			ctx.clearRect(0,0,WIDTH,HEIGHT);
-			for (var i=0;i<data.players.length;i++){
+			for (var i in Player.list){
 				ctx.fillStyle = "#29e929";
-				ctx.fillText(data.players[i].name,data.players[i].x,data.players[i].y);
+				ctx.fillText(Player.list[i].name,Player.list[i].x,Player.list[i].y);
 			}
-			for (var i=0;i<data.bullets.length;i++){
+			for (var i in Bullet.list){
 				ctx.fillStyle = "red";
-				ctx.fillRect(data.bullets[i].x-5,data.bullets[i].y-5,10,10);
+				ctx.fillRect(Bullet.list[i].x-5,Bullet.list[i].y-5,10,10);
 			}
-		})
+		},20);
 
+		// ============ events ===============
 		document.onkeydown = function(e) {
 			if(e.keyCode === 68) //d
 				socket.emit('keyPress',{inputId:'right', state:true});
@@ -153,6 +214,15 @@
 			var angle = Math.atan2(y,x) / Math.PI *180;
 			socket.emit('keyPress',{inputId:'mouseAngle',state:angle});
 		}
+
+		// ========== chat ========== //
+		var chatText = document.getElementById('chat-text');
+		var chatInput = document.getElementById('chat-input');
+		var chatForm = document.getElementById('chat-form');
+
+		canvas.onselectstart = function() {
+		    return false;
+		};
 
 		chatForm.onsubmit = function(e) {
 			e.preventDefault();
