--- a/client/index.html
+++ b/client/index.html
@@ -96,7 +96,7 @@
 
 		var ctx = canvas.getContext('2d');
 		
-		ctx.font = "40px Arial";
+		ctx.font = "14px Arial";
 
 		// ============ init ===============
 		var Player = function(initPack) {
@@ -105,6 +105,28 @@
 			self.name = initPack.name;
 			self.x = initPack.x;
 			self.y = initPack.y;
+			self.hp = initPack.hp;
+			self.maxHp = initPack.maxHp;
+			self.score = initPack.score;
+
+			self.draw = function() {
+				// skin
+				ctx.fillStyle = "#e67a7a";
+				ctx.beginPath();
+				ctx.arc(self.x, self.y, 14, 0, 2*Math.PI);
+				ctx.closePath();
+				ctx.fill();
+				// name
+				ctx.fillText(self.name,self.x,self.y+24);
+				// hp-bar
+				ctx.fillStyle = "#29e929";
+				var hpWidth = 30* self.hp/self.maxHp;
+				ctx.fillRect(self.x-hpWidth/2,self.y-30,hpWidth,4);
+				// score
+				ctx.fillStyle = "#ffffff";
+				ctx.fillText(self.score,self.x,self.y-44);
+			}
+
 			Player.list[self.id] = self;
 			return self;
 		}
@@ -116,11 +138,18 @@
 			self.id = initPack.id;
 			self.x = initPack.x;
 			self.y = initPack.y;
+
+			self.draw = function() {
+				ctx.fillStyle = "red";
+				ctx.fillRect(self.x-5,self.y-5,10,10);
+			}
+
 			Bullet.list[self.id] = self;
 			return self;
 		}
 
 		Bullet.list = {};
+
 		
 		socket.on('init',function(data){
 			for(var i=0;i<data.player.length;i++){
@@ -141,6 +170,10 @@
 						updatedPlayer.x = pack.x;
 					if(pack.y !== undefined)
 						updatedPlayer.y = pack.y;
+				if(pack.hp !== undefined)
+						updatedPlayer.hp = pack.hp;
+					if(pack.score !== undefined)
+						updatedPlayer.score = pack.score;
 				}
 			}
 			for(var i=0;i<data.bullet.length;i++){
@@ -165,15 +198,21 @@
 			}
 		});
 
+
+		// ============ client loop ===============
 		setInterval(function(){
 			ctx.clearRect(0,0,WIDTH,HEIGHT);
+			ctx.strokeStyle = "#3c3c3c";
+			for (let j=0;j<HEIGHT/100;j++) {
+			 for (let i=0;i<WIDTH/100;i++) {
+			  ctx.strokeRect(i*100,j*100,100,100);
+			 }
+			}
 			for (var i in Player.list){
-				ctx.fillStyle = "#29e929";
-				ctx.fillText(Player.list[i].name,Player.list[i].x,Player.list[i].y);
+				Player.list[i].draw();
 			}
 			for (var i in Bullet.list){
-				ctx.fillStyle = "red";
-				ctx.fillRect(Bullet.list[i].x-5,Bullet.list[i].y-5,10,10);
+				Bullet.list[i].draw();
 			}
 		},20);
 
