--- a/client/index.html
+++ b/client/index.html
@@ -121,7 +121,7 @@
 		var Player = function(initPack) {
 			var self = {};
 			self.id = initPack.id;
-			self.name = initPack.name;
+			self.username = initPack.username;
 			self.x = initPack.x;
 			self.y = initPack.y;
 			self.hp = initPack.hp;
@@ -138,7 +138,8 @@
 				ctx.closePath();
 				ctx.fill();
 				// name
-				ctx.fillText(self.name,x,y+24);
+				ctx.textAlign = "center";
+				ctx.fillText(self.username,x,y+30);
 				// hp-bar
 				ctx.fillStyle = "#29e929";
 				var hpWidth = 30* self.hp/self.maxHp;
@@ -239,8 +240,6 @@
 				delete Player.list[data.player[i]];
 			}
 			for(var i=0;i<data.bullet.length;i++){
-				// if(data.bullet.length>0)
-					// console.log(data.bullet);
 				delete Bullet.list[data.bullet[i]];
 
 			}
@@ -301,6 +300,10 @@
 			socket.emit('keyPress',{inputId:'mouseAngle',state:angle});
 		}
 
+		document.oncontextmenu = function(e) {
+			e.preventDefault();
+		}
+
 		// ========== chat ========== //
 		var chatText = document.getElementById('chat-text');
 		var chatInput = document.getElementById('chat-input');
@@ -314,6 +317,13 @@
 			e.preventDefault();
 			if(chatInput.value[0] === '/')
 				socket.emit('evalServer',chatInput.value.slice(1));
+			else if(chatInput.value[0] === '@'){
+				// @username message
+				socket.emit('chatPrivateMsgToServ',{
+					username:chatInput.value.slice(1,chatInput.value.indexOf(" ")),
+					message:chatInput.value.slice(chatInput.value.indexOf(" ") + 1)
+				});
+			}
 			else
 				socket.emit('chatMsgToServ',chatInput.value);
 			chatInput.value = "";
