fix: bullet speed, shooting speed

--- a/client/index.html
+++ b/client/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="description" content="Разработка архады на canvas и вебсокетах">P
+    <meta name="author" content="nickzames">
 	<meta charset="UTF-8">
 	<title>Аркада на canvas</title>
 	<link rel="stylesheet" href="client/css/style.css">
