--- a/client/index.html
+++ b/client/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<meta name="description" content="Разработка архады на canvas и вебсокетах">P
+	<meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no, width=device-width" />
+	<meta name="description" content="Разработка архады на canvas и вебсокетах">
     <meta name="author" content="nickzames">
 	<meta charset="UTF-8">
 	<title>Аркада на canvas</title>
@@ -102,6 +102,7 @@
 		/* ============= GAME SCREEN ================= */
 		// =========================================== //
 		var canvas = document.getElementById("canvas-main");
+		var chatActive = false;
 
 		canvas.width = window.innerWidth;
 		canvas.height = window.innerHeight;
@@ -270,15 +271,23 @@
 		},20);
 
 		// ============ events ===============
+		// Restriction to resize the screen
+		window.addEventListener("wheel", e=>{
+			if(e.ctrlKey)
+			  event.preventDefault();//prevent zoom
+		}, {passive: false});
+		
 		document.onkeydown = function(e) {
-			if(e.keyCode === 68) //d
-				socket.emit('keyPress',{inputId:'right', state:true});
-			if(e.keyCode === 83) //s
-				socket.emit('keyPress',{inputId:'bottom', state:true});
-			if(e.keyCode === 65) //a
-				socket.emit('keyPress',{inputId:'left', state:true});
-			if(e.keyCode === 87) //w
-				socket.emit('keyPress',{inputId:'top', state:true});
+			if(chatActive!=true){
+				if(e.keyCode === 68) //d
+					socket.emit('keyPress',{inputId:'right', state:true});
+				if(e.keyCode === 83) //s
+					socket.emit('keyPress',{inputId:'bottom', state:true});
+				if(e.keyCode === 65) //a
+					socket.emit('keyPress',{inputId:'left', state:true});
+				if(e.keyCode === 87) //w
+					socket.emit('keyPress',{inputId:'top', state:true});
+			}
 		}
 
 		document.onkeyup = function(e) {
@@ -320,8 +329,21 @@
 		    return false;
 		};
 
+		chatInput.addEventListener('focus', (event) => {
+			chatActive = true;  
+		}, true);
+		  
+		chatInput.addEventListener('blur', (event) => {
+			chatActive = false;  
+		}, true);
+
+		
+
 		chatForm.onsubmit = function(e) {
 			e.preventDefault();
+			chatActive = false;  
+			chatForm.tabIndex = -1;
+			chatForm.focus();
 			if(chatInput.value[0] === '/')
 				socket.emit('evalServer',chatInput.value.slice(1));
 			else if(chatInput.value[0] === '@'){
